ValueList should try to use a flat representation